--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,6 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
   "main": "Server.js",
   "scripts": {
     "dev": "nodemon Server.js",
@@ -13,8 +12,12 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mongoose": "^8.0.3",
+    "moongose": "^1.0.0",
     "nodemon": "^3.0.2"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
